Optimize and fix errors